consumin auth apis

--- a/public/account/user/dashboard.html
+++ b/public/account/user/dashboard.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" href="styles/auth.css">
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 
 <body class="roboto scroller">
@@ -41,44 +41,114 @@
                     </ul>
                 </div>
             </nav>
-            <div class="auth-full col-12 border">
-                <div class="col-12 col-md-4 mx-auto auth-con my-4">
-                    <h5 class="mt-4 grey text-center">Sign up to read and write feedback</h5>
-                    <div class="col-12 col-md-10 mx-auto connect-btn mt-5 row mx-0 border px-0">
-                        <div class="col-2 px-0">
-                            <div class="fb-logo mx-auto mt-1">
+            <div class="col-12 landing-full px-0">
+                <div class="landing-welcome col-12 px-0">
+                    <div class="welcome-bg col-12"></div>
+                    <div class="col-12 col-md-8 mx-auto pt-5 welcome-words text-center">
+                        <h2 class="mb-5 bold">We are creating a new level of transparency by <br>
+                            increasing civic participation in NDDC Projects</h2>
+                        <span class="">View, participate and share in the deliberations of NDDC Projects</span>
+                        <div class="special-input br-10px mb-3 mt-5 col-12 col-md-8 mx-auto row mx-0">
+                            <input type="text" class="form-control col-10 mt-2"
+                                placeholder="Search projects e.g. location, sector,organization or keyword">
+                            <button class="btn btn-brand col-2 p-0 mt-2">Search</button>
+                        </div>
+                    </div>
+                    <div class="col-12 row mx-0 col-md-11 mx-auto explore-projects mt-4">
+                        <div class="col-12 col-md-3 explore-by mx-auto px-0">
+                            <div class="w-100  by-sector-image">
+
+                            </div>
+                            <div class="pl-3 pt-2 explore-words">
+                                <span>Explore project by</span>
+                                <p>Sector</p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-3 explore-by mx-auto px-0">
+                            <div class="w-100  by-location-image">
+
+                            </div>
+                            <div class="pl-3 pt-2 explore-words">
+                                <span>Explore project by</span>
+                                <p>Location</p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-3 explore-by mx-auto px-0">
+                            <div class="w-100  by-organization-image">
+
+                            </div>
+                            <div class="pl-3 pt-2 explore-words">
+                                <span>Explore project by</span>
+                                <p>Organization</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 my-5 text-center mx-auto some-text-1">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                        Fugit incidunt voluptatem magni, voluptatum atque provident voluptates,
+                        labore, aut voluptas quia rem neque sapiente voluptatibus?
+                        Laboriosam blanditiis, mollitia asperiores natus!</p>
+                </div>
+                <div class="col-12 col-md-8 some-video-con br-10px mb-5 mx-auto row mx-0">
+                    <div class="col-12 col-md video-con">
+                        <div class="col-12 col-md-10 mx-auto my-5 video-box p-0">
+                            <div class="video-overlay col-12 h-100">
+                                <div class="play-overlay mx-auto text-center">
+                                    <i class="fa fas fa-play fa-lg mt-4"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md text-con">
+                        <div class="col-12 col-md-10 mx-auto my-5">
+                            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui impedit odit,
+                                vero animi quos, fugiat quisquam nulla esse veritatis dolorem quae,
+                                magni voluptas numquam!"</p>
+                            <span class="name">HRM John Doe</span><br>
+                            <span class="company">Alabo</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-11 row mx-0 mx-auto subscribe">
+                <div class="col-12 col-md my-5 mr-3 px-0 twitter-feed scroller">
+                    <a class="twitter-timeline" href="https://twitter.com/KswfHub?ref_src=twsrc%5Etfw">Tweets by
+                        KswfHub</a>
+                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                </div>
+                <div class="col-12 col-md my-5 px-5 newsletter-subscribe">
+                    <h3 class="bold mt-4">Stay Informed</h3>
+                    <p class="mt-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat animi maiores
+                        iste.</p>
+                    <div class="special-input br-10px mb-3 mt-5 col-12 col-md-12 mx-auto row mx-0">
+                        <input type="text" class="form-control col-12 col-md-9 mt-2"
+                            placeholder="Subscribe to our Newsletter">
+                        <button class="btn btn-brand col-12 col-md-3 mt-2">Subscribe</button>
+                    </div>
+                    <span class="mt-2">Connect with us on social media</span>
+                    <div class="social-con col-12 col-md-9 mt-3 px-0 row mx-0">
+                        <div class="col-6 col-md social-links">
+                            <div class="link-con mt-3 mx-auto">
+                                <img class="mt-2" src="images/twitter-white.svg" alt="">
+                            </div>
+                        </div>
+                        <div class="col-6 col-md social-links">
+                            <div class="link-con mt-3 mx-auto">
                                 <img class="mt-2" src="images/facebook-white.svg" alt="">
                             </div>
                         </div>
-                        <div class="col-10 pt-2 pl-5">
-                            <span class="grey bold">Connect with Facebook</span>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-10 mx-auto connect-btn mt-2 row mx-0 border px-0">
-                        <div class="col-2 px-0">
-                            <div class="google-logo mx-auto mt-1">
-                                <img class="mt-2" src="images/google.svg" alt="">
+                        <div class="col-6 col-md social-links">
+                            <div class="link-con mt-3 mx-auto">
+                                <img class="mt-2" src="images/linkedin-white.svg" alt="">
                             </div>
                         </div>
-                        <div class="col-10 pt-2 pl-5">
-                            <span class="grey bold">Connect with Google</span>
+                        <div class="col-6 col-md social-links">
+                            <div class="link-con mt-3 mx-auto">
+                                <img class="mt-2" src="images/instagram-white.svg" alt="">
+                            </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-10 mx-auto text-center mt-3">
-                        <a class="continue-email grey bold" href="">Continue with email</a>
-                    </div>
-                    <form class="col-12 col-md-10 mx-auto px-0">
-                        <div class="form-group mb-2">
-                            <label class="bold grey">Email</label>
-                            <input type="email" class="form-control" placeholder="Enter email">
-                        </div>
-                        <div class="form-group mb-2">
-                            <label class="bold grey">Password</label>
-                            <input type="password" class="form-control" placeholder="Password">
-                        </div>
-                        <a href="forgotpassword.html" class="forgot-password-link grey">Forgot password?</a>
-                        <button type="submit" class="btn btn-brand mb-5 col-12 bold">Continue with email</button>
-                    </form>
                 </div>
             </div>
             <footer class="col-12">
