--- a/public/login.html
+++ b/public/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title data-title>Password Recovery</title>
+    <title data-title>Login</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -42,16 +42,43 @@
                 </div>
             </nav>
             <div class="auth-full col-12 border">
-                <div class="col-12 col-md-4 mx-auto auth-con my-5">
-                    <h5 class="mt-5 grey bold text-center">Let's help you get back in</h5>
-                    <form class="col-12 col-md-10 mx-auto px-0 mt-5">
+                <div class="col-12 col-md-4 mx-auto auth-con my-4">
+                    <h5 class="mt-4 grey text-center">Login to read and write feedback</h5>
+                    <div class="col-12 col-md-10 mx-auto connect-btn mt-5 row mx-0 border px-0">
+                        <div class="col-2 px-0">
+                            <div class="fb-logo mx-auto mt-1">
+                                <img class="mt-2" src="images/facebook-white.svg" alt="">
+                            </div>
+                        </div>
+                        <div class="col-10 pt-2 pl-5">
+                            <span class="grey bold">Connect with Facebook</span>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-10 mx-auto connect-btn mt-2 row mx-0 border px-0">
+                        <div class="col-2 px-0">
+                            <div class="google-logo mx-auto mt-1">
+                                <img class="mt-2" src="images/google.svg" alt="">
+                            </div>
+                        </div>
+                        <div class="col-10 pt-2 pl-5">
+                            <span class="grey bold">Connect with Google</span>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-10 mx-auto text-center mt-3">
+                        <a class="continue-email grey bold" href="">Continue with email</a>
+                    </div>
+                    <form class="col-12 col-md-10 mx-auto px-0">
                         <div class="form-group mb-2">
                             <label class="bold grey">Email</label>
                             <input type="email" class="form-control" placeholder="Enter email">
                         </div>
-                        <button type="submit" class="btn btn-brand mb-5 col-12 bold">Recover</button>
+                        <div class="form-group mb-2">
+                            <label class="bold grey">Password</label>
+                            <input type="password" class="form-control" placeholder="Password">
+                        </div>
+                        <a href="forgotpassword.html" class="forgot-password-link grey">Forgot password?</a>
+                        <button type="submit" class="btn btn-brand mb-5 col-12 bold">Continue with email</button>
                     </form>
-                    <p class="bold instructions-sent text-center">Please check your mail for instructions</p>
                 </div>
             </div>
             <footer class="col-12">
