--- a/public/signup.html
+++ b/public/signup.html
@@ -33,7 +33,7 @@
                             <a class="nav-link" href="#">Categories</a>
                         </li>
                         <li class="nav-item mx-3">
-                            <a class="nav-link" href="signin.html">Sign In</a>
+                            <a class="nav-link" href="login.html">Sign In</a>
                         </li>
                         <li class="nav-item mx-3">
                             <a class="nav-link" href="signup.html">Register</a>
@@ -50,7 +50,7 @@
                                 <img class="mt-2" src="images/facebook-white.svg" alt="">
                             </div>
                         </div>
-                        <div class="col-10 pt-2 pl-5">
+                        <div class="col-10 pt-2 pl-5" data-facebook-login>
                             <span class="grey bold">Connect with Facebook</span>
                         </div>
                     </div>
@@ -60,7 +60,7 @@
                                 <img class="mt-2" src="images/google.svg" alt="">
                             </div>
                         </div>
-                        <div class="col-10 pt-2 pl-5" data-login-google>
+                        <div class="col-10 pt-2 pl-5" data-google-login>
                             <span class="grey bold">Connect with Google</span>
                         </div>
                     </div>
@@ -166,6 +166,8 @@
     <script src="js/validation/auth/register.js""></script>
     <script src="js/apis/auth/register.js""></script>
     <script src="js/validation/auth/verify.js""></script>
+    <script src="js/apis/auth/verify.js""></script>
+    <script src="js/apis/auth/third-party-login.js""></script>
 </body>
 
 </html>
