--- a/public/forgotpassword.html
+++ b/public/forgotpassword.html
@@ -33,7 +33,7 @@
                             <a class="nav-link" href="#">Categories</a>
                         </li>
                         <li class="nav-item mx-3">
-                            <a class="nav-link" href="signin.html">Sign In</a>
+                            <a class="nav-link" href="login.html">Sign In</a>
                         </li>
                         <li class="nav-item mx-3">
                             <a class="nav-link" href="signup.html">Register</a>
