--- a/public/login.html
+++ b/public/login.html
@@ -60,24 +60,26 @@
                                 <img class="mt-2" src="images/google.svg" alt="">
                             </div>
                         </div>
-                        <div class="col-10 pt-2 pl-5">
+                        <div class="col-10 pt-2 pl-5" data-google-login>
                             <span class="grey bold">Connect with Google</span>
                         </div>
                     </div>
                     <div class="col-12 col-md-10 mx-auto text-center mt-3">
                         <a class="continue-email grey bold" href="">Continue with email</a>
                     </div>
-                    <form class="col-12 col-md-10 mx-auto px-0">
+                    <form class="col-12 col-md-10 mx-auto px-0" data-login-form>
                         <div class="form-group mb-2">
                             <label class="bold grey">Email</label>
-                            <input type="email" class="form-control" placeholder="Enter email">
+                            <input name="email" type="email" class="form-control" placeholder="Enter email">
+                            <p class="error-fields" id="emailError"></p>
                         </div>
-                        <div class="form-group mb-2">
+                        <div class="form-group mb-3">
                             <label class="bold grey">Password</label>
-                            <input type="password" class="form-control" placeholder="Password">
+                            <input name="password" type="password" class="form-control" placeholder="Password">
+                            <p class="error-fields" id="passwordError"></p>
                         </div>
+                        <button type="submit" class="btn btn-brand mb-3 col-12 bold">Continue with email</button>
                         <a href="forgotpassword.html" class="forgot-password-link grey">Forgot password?</a>
-                        <button type="submit" class="btn btn-brand mb-5 col-12 bold">Continue with email</button>
                     </form>
                 </div>
             </div>
@@ -150,6 +152,10 @@
 
     <script src="js/general/third_party_cdn.js""></script>
     <script src="js/general/placeholder.js""></script>
+    <script src="js/general/routes.js""></script>
+    <script src="js/validation/auth/login.js""></script>
+    <script src="js/apis/auth/login.js""></script>
+    <script src="js/apis/auth/third-party-login.js""></script>
 </body>
 
 </html>
