--- a/public/account/user/dashboard.html
+++ b/public/account/user/dashboard.html
@@ -271,5 +271,6 @@
         </div>
     </div>
 </body>
+<script src=" ../../js/general/placeholder.js"> </script>
 <script src="../../js/general/third_party_cdn.js"></script>
-    <script src=" ../../js/general/placeholder.js"> </script> </html>
+ </html>
