--- a/public/account/user/profile-settings.html
+++ b/public/account/user/profile-settings.html
@@ -17,7 +17,7 @@
     <div class="container-fluid">
         <div class="row">
             <nav class="navbar navbar-expand-lg navbar-light our-nav col-12">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="#">
                     <div class="border logo-replace"></div>
                     <span class="ml-3 mt-2 bold">NDDC TRACKER</span>
                 </a>
