--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
                         <div class="special-input br-10px mb-3 mt-5 col-12 col-md-8 mx-auto row mx-0">
                             <input type="text" class="form-control col-10 mt-2"
                                 placeholder="Search projects e.g. location, sector,organization or keyword">
-                            <button class="btn btn-brand col-2 p-0 mt-2">Search</button>
+                            <button class="btn btn-brand col-2 p-0 mt-2" onclick="location.href='project/search-results.html'">Search</button>
                         </div>
                     </div>
                     <div class="col-12 row mx-0 col-md-11 mx-auto explore-projects mt-4">
