--- a/public/project/project.html
+++ b/public/project/project.html
@@ -17,7 +17,7 @@
     <div class="container-fluid">
         <div class="row">
             <nav class="navbar navbar-expand-lg navbar-light our-nav col-12">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="#">
                     <div class="border logo-replace"></div>
                     <span class="ml-3 mt-2 bold">NDDC TRACKER</span>
                 </a>
@@ -48,7 +48,7 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="#">Saved Projects</a>
-                                <a class="dropdown-item" href="#">Settings</a>
+                                <a class="dropdown-item" href="../account/user/profile-settings.html">Settings</a>
                                 <a class="dropdown-item" href="#">Help</a>
                                 <a class="dropdown-item" href="#">Log Out</a>
                             </div>
