--- a/public/project/search-results.html
+++ b/public/project/search-results.html
@@ -17,7 +17,7 @@
     <div class="container-fluid">
         <div class="row">
             <nav class="navbar navbar-expand-lg navbar-light our-nav col-12">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="#">
                     <div class="border logo-replace"></div>
                     <span class="ml-3 mt-2 bold">NDDC TRACKER</span>
                 </a>
@@ -48,7 +48,7 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="#">Saved Projects</a>
-                                <a class="dropdown-item" href="#">Settings</a>
+                                <a class="dropdown-item" href="../account/user/profile-settings.html">Settings</a>
                                 <a class="dropdown-item" href="#">Help</a>
                                 <a class="dropdown-item" href="#">Log Out</a>
                             </div>
@@ -177,7 +177,7 @@
                             </div>
                             <div class="col-12 col-md-7 project-details">
                                 <div class="col-12 title-removefrom row mx-0">
-                                    <h3 class="grey bold px-0 col-12 col-md-9 mt-2">Project Title</h3>
+                                    <h3 class="grey bold px-0 col-12 col-md-9 mt-2" onclick="location.href='project.html'">Project Title</h3>
                                     <span class="col-12 col-md-3 px-0 mt-2 grey mt-2">Delete from saved</span>
                                 </div>
                                 <div class="col-12 contractor-name">
